# hotspur

./: .gitignore  BUG_FIXES.md  DEPLOYMENT.md  DEVELOPMENT_LOG.md  FILES_CREATED.md  HOTSPUR_VISION.md  README.md  TRAINING_STATUS.md  build.sh  build_lightweight.sh  build_memory_optimized.sh  check_render_readiness.py  check_shakespeare_structure.py  config.py  debug_empty_search.py  debug_work_filtering.py  deploy_prep.py  diagnose_search.py  finetune_shakespeare.py  fix_git_large_files.py  fix_parser.py  fix_work_filtering.py  force_rebuild.py  prepare_lightweight_data.py  pyproject.toml  quick_start.py  rebuild_search_index.py  render.yaml  requirements.txt  streamlit_config.toml  test_search.py  verify_setup.py
archive/: README.md
data/processed/: modern_tokenization_results.json  shakespeare_lightweight.txt  shakespeare_subword_vocab.json  shakespeare_text_vocabulary.json  shakespeare_vocabulary.json  vocabulary.json
docs/: API_REFERENCE.md  INSTALLATION.md  TROUBLESHOOTING.md  TUTORIALS.md
examples/: README.md  demo.py  examples.py  main.py  simple_train.py
hotspur_search/: README.md  __init__.py  requirements.txt  setup_search.py
hotspur_search/index/: _MAIN_1.toc
hotspur_search/streamlit_app/: app.py
hotspur_search/utils/: __init__.py  search_engine.py.backup  shakespeare_parser.py
models/tokenizers/: shakespeare_sp.model  shakespeare_sp.vocab
scripts/: README.md
scripts/data/: build_vocabulary.py  clean_sonnets.py  create_shakes_vocab1.py  (+8 more)
tests/: minimal_test.py  system_test.py  test_setup.py  test_training.py  verbose_test.py
(+10 files in other folders)
