[project]
name = "hotspur"
version = "0.1.0"
description = "Hotspur: A Shakespeare Expert AI Assistant with search and analysis capabilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "sentencepiece>=0.2.0",
    "transformers>=4.52.3",
    "torch>=2.0.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "tokenizers>=0.13.0",
    "numpy>=1.24.0",
    "tqdm>=4.65.0",
    # Search component dependencies
    "whoosh>=2.7.4",
    "streamlit>=1.28.1",
    "pandas>=2.1.3",
]

[project.optional-dependencies]
search = [
    "whoosh>=2.7.4",
    "streamlit>=1.28.1", 
    "pandas>=2.1.3",
]
